--- a/calculator.html
+++ b/calculator.html
@@ -23,7 +23,7 @@
         <button>%</button>
         <button onclick="clearCode()">CE</button>
         <button onclick="clearCode()">C</button>
-        <button onclick="backspace()">BS</button>
+        <button onclick="clearCode()">BS</button>
     </div>
     <div class="row2">
         <button>1/x</button>
