--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Standard</p>
         </div>
         <div id="history">
-            <button onclick="history()">
+            <button onclick="historyBox()">
                 <span class="material-symbols-outlined">history</span>
             </button>
         </div>
@@ -45,13 +45,13 @@
             <button onclick="funBut()">M&#8744;</button>
         </div>
         <div id="buttons">
-            <button onclick="updateOutputNum('&#37;')" class="buttongray">&#37;</button>
-            <button onclick="clearOutputNum()" class="buttongray">CE</button>
+            <button onclick="percentage()" class="buttongray">&#37;</button>
+            <button onclick="clearEntryOutputNum()" class="buttongray">CE</button>
             <button onclick="clearOutputNum()" class="buttongray">C</button>
             <button onclick="backspaceOutputNum()" class="buttongray"><span class="material-symbols-outlined">backspace</span></button>
-            <button class="buttongray"><sup>&#8321;</sup>/&#119909;</button>
-            <button class="buttongray">&#119909;<sup>&#8322;</sup></button>
-            <button class="buttongray">&#178;&#8730;&#119909;</button>
+            <button onclick="overX()" class="buttongray"><sup>&#8321;</sup>/&#119909;</button>
+            <button onclick="power()" class="buttongray">&#119909;<sup>&#8322;</sup></button>
+            <button onclick="sqrtrt()" class="buttongray">&#178;&#8730;&#119909;</button>
             <button onclick="updateOutputNum('&#247;');div()" class="buttongray">&#247;</button>
             <button onclick="updateOutputNum('7')">7</button>
             <button onclick="updateOutputNum('8')">8</button>
